--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"start": "node build/index.js",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -38,6 +39,7 @@
 	"type": "module",
 	"dependencies": {
 		"@steeze-ui/material-design-icons": "^1.0.0",
-		"@steeze-ui/svelte-icon": "^1.3.2"
+		"@steeze-ui/svelte-icon": "^1.3.2",
+		"@sveltejs/adapter-node": "^1.2.0"
 	}
 }
